# wallet-api

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
app/: __init__.py  config.py  database.py  exceptions.py  main.py
app/api/: __init__.py  deps.py
app/api/v1/: __init__.py  wallets.py
app/models/: __init__.py  idempotency.py  transaction.py  wallet.py
app/schemas/: __init__.py  transaction.py  wallet.py
app/services/: __init__.py  wallet_service.py
migrations/: env.py  script.py.mako
migrations/versions/: 001_initial.py
tests/: __init__.py  conftest.py  test_concurrency.py  test_wallets.py
